// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`constructOrderBook 1`] = `
Object {
  "asks": Array [
    Object {
      "balance": 5,
      "initialSequence": 9,
      "orderHash": "orderHash5",
      "price": 110,
    },
    Object {
      "balance": 5,
      "initialSequence": 11,
      "orderHash": "orderHash7",
      "price": 110,
    },
    Object {
      "balance": 5,
      "initialSequence": 12,
      "orderHash": "orderHash8",
      "price": 110,
    },
    Object {
      "balance": 5,
      "initialSequence": 10,
      "orderHash": "orderHash6",
      "price": 120,
    },
  ],
  "bids": Array [
    Object {
      "balance": 5,
      "initialSequence": 2,
      "orderHash": "orderHash2",
      "price": 110,
    },
    Object {
      "balance": 5,
      "initialSequence": 1,
      "orderHash": "orderHash1",
      "price": 100,
    },
    Object {
      "balance": 5,
      "initialSequence": 3,
      "orderHash": "orderHash3",
      "price": 100,
    },
    Object {
      "balance": 5,
      "initialSequence": 4,
      "orderHash": "orderHash4",
      "price": 100,
    },
  ],
}
`;

exports[`constructOrderBook, with zero balance liveOrder 1`] = `
Object {
  "asks": Array [
    Object {
      "balance": 5,
      "initialSequence": 9,
      "orderHash": "orderHash5",
      "price": 110,
    },
    Object {
      "balance": 5,
      "initialSequence": 11,
      "orderHash": "orderHash7",
      "price": 110,
    },
    Object {
      "balance": 5,
      "initialSequence": 12,
      "orderHash": "orderHash8",
      "price": 110,
    },
    Object {
      "balance": 5,
      "initialSequence": 10,
      "orderHash": "orderHash6",
      "price": 120,
    },
  ],
  "bids": Array [
    Object {
      "balance": 5,
      "initialSequence": 2,
      "orderHash": "orderHash2",
      "price": 110,
    },
    Object {
      "balance": 5,
      "initialSequence": 3,
      "orderHash": "orderHash3",
      "price": 100,
    },
    Object {
      "balance": 5,
      "initialSequence": 4,
      "orderHash": "orderHash4",
      "price": 100,
    },
    Object {
      "balance": 0,
      "initialSequence": 1,
      "orderHash": "orderHash1",
      "price": 100,
    },
  ],
}
`;

exports[`renderOrderBookSnapshot 1`] = `
Object {
  "asks": Array [
    Object {
      "balance": 40,
      "count": 2,
      "price": 120,
    },
    Object {
      "balance": 20,
      "count": 1,
      "price": 140,
    },
  ],
  "bids": Array [
    Object {
      "balance": 20,
      "count": 1,
      "price": 120,
    },
    Object {
      "balance": 50,
      "count": 2,
      "price": 100,
    },
  ],
  "pair": "pair",
  "version": 1234567890000,
}
`;

exports[`renderOrderBookSnapshotSide 1`] = `
Array [
  Object {
    "balance": 20,
    "count": 1,
    "price": 120,
  },
  Object {
    "balance": 50,
    "count": 2,
    "price": 100,
  },
]
`;

exports[`renderOrderBookSnapshotSide, with zero level balance 1`] = `
Array [
  Object {
    "balance": 50,
    "count": 2,
    "price": 100,
  },
]
`;

exports[`renderOrderBookSnapshotSide, with zero level count 1`] = `Array []`;

exports[`sortOrderBookLevels | ask 1`] = `
Array [
  Object {
    "balance": 30,
    "initialSequence": 12,
    "orderHash": "orderHash2",
    "price": 120,
  },
  Object {
    "balance": 20,
    "initialSequence": 10,
    "orderHash": "orderHash1",
    "price": 120,
  },
  Object {
    "balance": 20,
    "initialSequence": 13,
    "orderHash": "orderHash3",
    "price": 120,
  },
  Object {
    "balance": 20,
    "initialSequence": 11,
    "orderHash": "orderHash4",
    "price": 140,
  },
]
`;

exports[`sortOrderBookLevels | bid 1`] = `
Array [
  Object {
    "balance": 20,
    "initialSequence": 11,
    "orderHash": "orderHash1",
    "price": 120,
  },
  Object {
    "balance": 30,
    "initialSequence": 12,
    "orderHash": "orderHash3",
    "price": 100,
  },
  Object {
    "balance": 20,
    "initialSequence": 10,
    "orderHash": "orderHash2",
    "price": 100,
  },
  Object {
    "balance": 20,
    "initialSequence": 13,
    "orderHash": "orderHash4",
    "price": 100,
  },
]
`;

exports[`updateOrderBook, isBid false, isTerminate false, existing order 1`] = `
Object {
  "asks": Array [
    Object {
      "balance": 30,
      "initialSequence": 12,
      "orderHash": "orderHash2",
      "price": 120,
    },
    Object {
      "balance": 20,
      "initialSequence": 10,
      "orderHash": "orderHash1",
      "price": 120,
    },
    Object {
      "balance": 20,
      "initialSequence": 13,
      "orderHash": "orderHash3",
      "price": 120,
    },
    Object {
      "balance": 20,
      "initialSequence": 11,
      "orderHash": "orderHash4",
      "price": 140,
    },
  ],
  "bids": Array [
    Object {
      "balance": 20,
      "initialSequence": 11,
      "orderHash": "orderHash1",
      "price": 120,
    },
    Object {
      "balance": 30,
      "initialSequence": 12,
      "orderHash": "orderHash3",
      "price": 100,
    },
    Object {
      "balance": 20,
      "initialSequence": 13,
      "orderHash": "orderHash4",
      "price": 100,
    },
  ],
}
`;

exports[`updateOrderBook, isBid false, isTerminate false, existing order, balance 0 1`] = `
Object {
  "asks": Array [
    Object {
      "balance": 20,
      "initialSequence": 10,
      "orderHash": "orderHash1",
      "price": 120,
    },
    Object {
      "balance": 20,
      "initialSequence": 13,
      "orderHash": "orderHash3",
      "price": 120,
    },
    Object {
      "balance": 0,
      "initialSequence": 12,
      "orderHash": "orderHash2",
      "price": 120,
    },
    Object {
      "balance": 20,
      "initialSequence": 11,
      "orderHash": "orderHash4",
      "price": 140,
    },
  ],
  "bids": Array [
    Object {
      "balance": 20,
      "initialSequence": 11,
      "orderHash": "orderHash1",
      "price": 120,
    },
    Object {
      "balance": 30,
      "initialSequence": 12,
      "orderHash": "orderHash3",
      "price": 100,
    },
    Object {
      "balance": 20,
      "initialSequence": 13,
      "orderHash": "orderHash4",
      "price": 100,
    },
  ],
}
`;

exports[`updateOrderBook, isBid false, isTerminate false, not existing order 1`] = `
Object {
  "asks": Array [
    Object {
      "balance": 20,
      "initialSequence": 10,
      "orderHash": "orderHash1",
      "price": 120,
    },
    Object {
      "balance": 20,
      "initialSequence": 13,
      "orderHash": "orderHash3",
      "price": 120,
    },
    Object {
      "balance": 30,
      "initialSequence": 15,
      "orderHash": "orderHash5",
      "price": 140,
    },
    Object {
      "balance": 20,
      "initialSequence": 11,
      "orderHash": "orderHash4",
      "price": 140,
    },
  ],
  "bids": Array [
    Object {
      "balance": 20,
      "initialSequence": 11,
      "orderHash": "orderHash1",
      "price": 120,
    },
    Object {
      "balance": 30,
      "initialSequence": 12,
      "orderHash": "orderHash3",
      "price": 100,
    },
    Object {
      "balance": 20,
      "initialSequence": 13,
      "orderHash": "orderHash4",
      "price": 100,
    },
  ],
}
`;

exports[`updateOrderBook, isBid false, isTerminate true 1`] = `
Object {
  "asks": Array [
    Object {
      "balance": 20,
      "initialSequence": 10,
      "orderHash": "orderHash1",
      "price": 120,
    },
    Object {
      "balance": 20,
      "initialSequence": 13,
      "orderHash": "orderHash3",
      "price": 120,
    },
    Object {
      "balance": 20,
      "initialSequence": 11,
      "orderHash": "orderHash4",
      "price": 140,
    },
  ],
  "bids": Array [
    Object {
      "balance": 20,
      "initialSequence": 11,
      "orderHash": "orderHash1",
      "price": 120,
    },
    Object {
      "balance": 30,
      "initialSequence": 12,
      "orderHash": "orderHash3",
      "price": 100,
    },
    Object {
      "balance": 20,
      "initialSequence": 13,
      "orderHash": "orderHash4",
      "price": 100,
    },
  ],
}
`;

exports[`updateOrderBook, isBid false, isTerminate true 2`] = `
Object {
  "asks": Array [
    Object {
      "balance": 20,
      "initialSequence": 10,
      "orderHash": "orderHash1",
      "price": 120,
    },
    Object {
      "balance": 20,
      "initialSequence": 13,
      "orderHash": "orderHash3",
      "price": 120,
    },
    Object {
      "balance": 20,
      "initialSequence": 11,
      "orderHash": "orderHash4",
      "price": 140,
    },
  ],
  "bids": Array [
    Object {
      "balance": 20,
      "initialSequence": 11,
      "orderHash": "orderHash1",
      "price": 120,
    },
    Object {
      "balance": 30,
      "initialSequence": 12,
      "orderHash": "orderHash3",
      "price": 100,
    },
    Object {
      "balance": 20,
      "initialSequence": 13,
      "orderHash": "orderHash4",
      "price": 100,
    },
  ],
}
`;

exports[`updateOrderBook, isBid true, isTerminate false, existing order 1`] = `
Object {
  "asks": Array [
    Object {
      "balance": 30,
      "initialSequence": 12,
      "orderHash": "orderHash2",
      "price": 120,
    },
    Object {
      "balance": 20,
      "initialSequence": 10,
      "orderHash": "orderHash1",
      "price": 120,
    },
    Object {
      "balance": 20,
      "initialSequence": 13,
      "orderHash": "orderHash3",
      "price": 120,
    },
    Object {
      "balance": 20,
      "initialSequence": 11,
      "orderHash": "orderHash4",
      "price": 140,
    },
  ],
  "bids": Array [
    Object {
      "balance": 20,
      "initialSequence": 11,
      "orderHash": "orderHash1",
      "price": 120,
    },
    Object {
      "balance": 30,
      "initialSequence": 10,
      "orderHash": "orderHash2",
      "price": 100,
    },
    Object {
      "balance": 30,
      "initialSequence": 12,
      "orderHash": "orderHash3",
      "price": 100,
    },
    Object {
      "balance": 20,
      "initialSequence": 13,
      "orderHash": "orderHash4",
      "price": 100,
    },
  ],
}
`;

exports[`updateOrderBook, isBid true, isTerminate false, existing order, balance 0 1`] = `
Object {
  "asks": Array [
    Object {
      "balance": 30,
      "initialSequence": 12,
      "orderHash": "orderHash2",
      "price": 120,
    },
    Object {
      "balance": 20,
      "initialSequence": 10,
      "orderHash": "orderHash1",
      "price": 120,
    },
    Object {
      "balance": 20,
      "initialSequence": 13,
      "orderHash": "orderHash3",
      "price": 120,
    },
    Object {
      "balance": 20,
      "initialSequence": 11,
      "orderHash": "orderHash4",
      "price": 140,
    },
  ],
  "bids": Array [
    Object {
      "balance": 20,
      "initialSequence": 11,
      "orderHash": "orderHash1",
      "price": 120,
    },
    Object {
      "balance": 30,
      "initialSequence": 12,
      "orderHash": "orderHash3",
      "price": 100,
    },
    Object {
      "balance": 20,
      "initialSequence": 13,
      "orderHash": "orderHash4",
      "price": 100,
    },
    Object {
      "balance": 0,
      "initialSequence": 10,
      "orderHash": "orderHash2",
      "price": 100,
    },
  ],
}
`;

exports[`updateOrderBook, isBid true, isTerminate false, not existing order 1`] = `
Object {
  "asks": Array [
    Object {
      "balance": 30,
      "initialSequence": 12,
      "orderHash": "orderHash2",
      "price": 120,
    },
    Object {
      "balance": 20,
      "initialSequence": 10,
      "orderHash": "orderHash1",
      "price": 120,
    },
    Object {
      "balance": 20,
      "initialSequence": 13,
      "orderHash": "orderHash3",
      "price": 120,
    },
    Object {
      "balance": 20,
      "initialSequence": 11,
      "orderHash": "orderHash4",
      "price": 140,
    },
  ],
  "bids": Array [
    Object {
      "balance": 30,
      "initialSequence": 15,
      "orderHash": "orderHash5",
      "price": 120,
    },
    Object {
      "balance": 20,
      "initialSequence": 11,
      "orderHash": "orderHash1",
      "price": 120,
    },
    Object {
      "balance": 30,
      "initialSequence": 12,
      "orderHash": "orderHash3",
      "price": 100,
    },
    Object {
      "balance": 20,
      "initialSequence": 13,
      "orderHash": "orderHash4",
      "price": 100,
    },
  ],
}
`;

exports[`updateOrderBook, isBid true, isTerminate true existing balance 0 1`] = `
Object {
  "asks": Array [
    Object {
      "balance": 30,
      "initialSequence": 12,
      "orderHash": "orderHash2",
      "price": 120,
    },
    Object {
      "balance": 20,
      "initialSequence": 10,
      "orderHash": "orderHash1",
      "price": 120,
    },
    Object {
      "balance": 20,
      "initialSequence": 13,
      "orderHash": "orderHash3",
      "price": 120,
    },
    Object {
      "balance": 20,
      "initialSequence": 11,
      "orderHash": "orderHash4",
      "price": 140,
    },
  ],
  "bids": Array [
    Object {
      "balance": 20,
      "initialSequence": 11,
      "orderHash": "orderHash1",
      "price": 120,
    },
    Object {
      "balance": 30,
      "initialSequence": 12,
      "orderHash": "orderHash3",
      "price": 100,
    },
    Object {
      "balance": 20,
      "initialSequence": 13,
      "orderHash": "orderHash4",
      "price": 100,
    },
  ],
}
`;

exports[`updateOrderBook, isBid true, isTerminate true existing balance not 0 1`] = `
Object {
  "asks": Array [
    Object {
      "balance": 30,
      "initialSequence": 12,
      "orderHash": "orderHash2",
      "price": 120,
    },
    Object {
      "balance": 20,
      "initialSequence": 10,
      "orderHash": "orderHash1",
      "price": 120,
    },
    Object {
      "balance": 20,
      "initialSequence": 13,
      "orderHash": "orderHash3",
      "price": 120,
    },
    Object {
      "balance": 20,
      "initialSequence": 11,
      "orderHash": "orderHash4",
      "price": 140,
    },
  ],
  "bids": Array [
    Object {
      "balance": 20,
      "initialSequence": 11,
      "orderHash": "orderHash1",
      "price": 120,
    },
    Object {
      "balance": 30,
      "initialSequence": 12,
      "orderHash": "orderHash3",
      "price": 100,
    },
    Object {
      "balance": 20,
      "initialSequence": 13,
      "orderHash": "orderHash4",
      "price": 100,
    },
  ],
}
`;

exports[`updateOrderBook, isBid true, isTerminate true, newLevel does not exist 1`] = `
Object {
  "asks": Array [
    Object {
      "balance": 30,
      "initialSequence": 12,
      "orderHash": "orderHash2",
      "price": 120,
    },
    Object {
      "balance": 20,
      "initialSequence": 10,
      "orderHash": "orderHash1",
      "price": 120,
    },
    Object {
      "balance": 20,
      "initialSequence": 13,
      "orderHash": "orderHash3",
      "price": 120,
    },
    Object {
      "balance": 20,
      "initialSequence": 11,
      "orderHash": "orderHash4",
      "price": 140,
    },
  ],
  "bids": Array [
    Object {
      "balance": 20,
      "initialSequence": 11,
      "orderHash": "orderHash1",
      "price": 120,
    },
    Object {
      "balance": 30,
      "initialSequence": 12,
      "orderHash": "orderHash3",
      "price": 100,
    },
    Object {
      "balance": 20,
      "initialSequence": 13,
      "orderHash": "orderHash4",
      "price": 100,
    },
  ],
}
`;

exports[`updateOrderBookSnapshot, ask, existingLevel 1`] = `
Object {
  "asks": Array [
    Object {
      "balance": 20,
      "count": 4,
      "price": 130,
    },
    Object {
      "balance": 20,
      "count": 7,
      "price": 140,
    },
    Object {
      "balance": 30,
      "count": 5,
      "price": 150,
    },
  ],
  "bids": Array [
    Object {
      "balance": 20,
      "count": 4,
      "price": 120,
    },
    Object {
      "balance": 10,
      "count": 6,
      "price": 110,
    },
    Object {
      "balance": 30,
      "count": 5,
      "price": 100,
    },
  ],
  "pair": "pair",
  "version": 1234567990000,
}
`;

exports[`updateOrderBookSnapshot, ask, existingLevel, updated to 0 1`] = `
Object {
  "asks": Array [
    Object {
      "balance": 20,
      "count": 4,
      "price": 130,
    },
    Object {
      "balance": 30,
      "count": 5,
      "price": 150,
    },
  ],
  "bids": Array [
    Object {
      "balance": 20,
      "count": 4,
      "price": 120,
    },
    Object {
      "balance": 10,
      "count": 6,
      "price": 110,
    },
    Object {
      "balance": 30,
      "count": 5,
      "price": 100,
    },
  ],
  "pair": "pair",
  "version": 1234567990000,
}
`;

exports[`updateOrderBookSnapshot, ask, not existingLevel, count = -1 1`] = `
Object {
  "asks": Array [
    Object {
      "balance": 20,
      "count": 4,
      "price": 130,
    },
    Object {
      "balance": 10,
      "count": 6,
      "price": 140,
    },
    Object {
      "balance": 30,
      "count": 5,
      "price": 150,
    },
  ],
  "bids": Array [
    Object {
      "balance": 20,
      "count": 4,
      "price": 120,
    },
    Object {
      "balance": 10,
      "count": 6,
      "price": 110,
    },
    Object {
      "balance": 30,
      "count": 5,
      "price": 100,
    },
  ],
  "pair": "pair",
  "version": 1234567990000,
}
`;

exports[`updateOrderBookSnapshot, ask, not existingLevel, count > 0 1`] = `
Object {
  "asks": Array [
    Object {
      "balance": 20,
      "count": 4,
      "price": 130,
    },
    Object {
      "balance": 10,
      "count": 6,
      "price": 140,
    },
    Object {
      "balance": 10,
      "count": 1,
      "price": 145,
    },
    Object {
      "balance": 30,
      "count": 5,
      "price": 150,
    },
  ],
  "bids": Array [
    Object {
      "balance": 20,
      "count": 4,
      "price": 120,
    },
    Object {
      "balance": 10,
      "count": 6,
      "price": 110,
    },
    Object {
      "balance": 30,
      "count": 5,
      "price": 100,
    },
  ],
  "pair": "pair",
  "version": 1234567990000,
}
`;

exports[`updateOrderBookSnapshot, bid, existingLevel 1`] = `
Object {
  "asks": Array [
    Object {
      "balance": 20,
      "count": 4,
      "price": 130,
    },
    Object {
      "balance": 10,
      "count": 6,
      "price": 140,
    },
    Object {
      "balance": 30,
      "count": 5,
      "price": 150,
    },
  ],
  "bids": Array [
    Object {
      "balance": 20,
      "count": 4,
      "price": 120,
    },
    Object {
      "balance": 20,
      "count": 7,
      "price": 110,
    },
    Object {
      "balance": 30,
      "count": 5,
      "price": 100,
    },
  ],
  "pair": "pair",
  "version": 1234567990000,
}
`;

exports[`updateOrderBookSnapshot, bid, existingLevel, updated to 0 1`] = `
Object {
  "asks": Array [
    Object {
      "balance": 20,
      "count": 4,
      "price": 130,
    },
    Object {
      "balance": 10,
      "count": 6,
      "price": 140,
    },
    Object {
      "balance": 30,
      "count": 5,
      "price": 150,
    },
  ],
  "bids": Array [
    Object {
      "balance": 20,
      "count": 4,
      "price": 120,
    },
    Object {
      "balance": 30,
      "count": 5,
      "price": 100,
    },
  ],
  "pair": "pair",
  "version": 1234567990000,
}
`;

exports[`updateOrderBookSnapshot, bid, not existingLevel, count = -1 1`] = `
Object {
  "asks": Array [
    Object {
      "balance": 20,
      "count": 4,
      "price": 130,
    },
    Object {
      "balance": 10,
      "count": 6,
      "price": 140,
    },
    Object {
      "balance": 30,
      "count": 5,
      "price": 150,
    },
  ],
  "bids": Array [
    Object {
      "balance": 20,
      "count": 4,
      "price": 120,
    },
    Object {
      "balance": 10,
      "count": 6,
      "price": 110,
    },
    Object {
      "balance": 30,
      "count": 5,
      "price": 100,
    },
  ],
  "pair": "pair",
  "version": 1234567990000,
}
`;

exports[`updateOrderBookSnapshot, bid, not existingLevel, count > 0 1`] = `
Object {
  "asks": Array [
    Object {
      "balance": 20,
      "count": 4,
      "price": 130,
    },
    Object {
      "balance": 10,
      "count": 6,
      "price": 140,
    },
    Object {
      "balance": 30,
      "count": 5,
      "price": 150,
    },
  ],
  "bids": Array [
    Object {
      "balance": 20,
      "count": 4,
      "price": 120,
    },
    Object {
      "balance": 10,
      "count": 1,
      "price": 115,
    },
    Object {
      "balance": 10,
      "count": 6,
      "price": 110,
    },
    Object {
      "balance": 30,
      "count": 5,
      "price": 100,
    },
  ],
  "pair": "pair",
  "version": 1234567990000,
}
`;
